5231 ::printf doesn't handle enums Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Alex Reece <alex@delphix.com> Approved by: Robert Mustacchi <rm@joyent.com>